--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,7 @@
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
     </style>
+    <style name="MainScreenTitleStyle">
+        <item name="android:textColor">@color/deepBrown</item>
+    </style>
 </resources>
