--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,62 +4,103 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:windowSoftInputMode="adjustResize|adjustPan"
+    android:isScrollContainer="false"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="388dp"
-        android:layout_height="92dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="89dp"
+        android:layout_marginTop="25dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="10dp"
+        app:cardElevation="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/GameScreenTitle_txt"
+            style="@style/MainScreenTitleStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif-condensed"
+            android:shadowColor="@color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="2"
+            android:text="@string/game_screen_title"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:translationZ="10dp" />
+
+        <TextView
+            android:id="@+id/GameScreenBody_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif-smallcaps"
+            android:shadowColor="@color/black"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="1"
+            android:text="@string/cows_and_bulls"
+            android:textColor="@color/lightRed"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:translationZ="10dp"
+            android:typeface="normal" />
+
+
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/GameScreenTitle_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="60dp"
-        android:fontFamily="sans-serif-condensed"
-        android:shadowColor="@color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="2"
-        android:text="@string/game_screen_title"
-        android:textColor="#039BE5"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        android:translationZ="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/GameScreenBody_txt"
-        app:layout_constraintEnd_toEndOf="@+id/cardView"
-        app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="@+id/cardView" />
+    <!--    <TextView-->
+    <!--        android:id="@+id/GameScreenTitle_txt"-->
+    <!--        style="@style/MainScreenTitleStyle"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginEnd="60dp"-->
+    <!--        android:fontFamily="sans-serif-condensed"-->
+    <!--        android:shadowColor="@color/black"-->
+    <!--        android:shadowDx="2"-->
+    <!--        android:shadowDy="2"-->
+    <!--        android:shadowRadius="2"-->
+    <!--        android:text="@string/game_screen_title"-->
+    <!--        android:textSize="34sp"-->
+    <!--        android:textStyle="bold"-->
+    <!--        android:translationZ="10dp"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/GameScreenBody_txt"-->
+    <!--        app:layout_constraintEnd_toEndOf="@+id/cardView"-->
+    <!--        app:layout_constraintStart_toStartOf="@+id/cardView"-->
+    <!--        app:layout_constraintTop_toTopOf="@+id/cardView" />-->
 
-    <TextView
-        android:id="@+id/GameScreenBody_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:fontFamily="sans-serif-smallcaps"
-        android:shadowColor="@color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
-        android:text="@string/cows_and_bulls"
-        android:textColor="#F1514E"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:translationZ="10dp"
-        android:typeface="normal"
-        app:layout_constraintBottom_toBottomOf="@+id/cardView"
-        app:layout_constraintEnd_toEndOf="@+id/cardView"
-        app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="@+id/cardView" />
+    <!--    <TextView-->
+    <!--        android:id="@+id/GameScreenBody_txt"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginTop="50dp"-->
+    <!--        android:fontFamily="sans-serif-smallcaps"-->
+    <!--        android:shadowColor="@color/black"-->
+    <!--        android:shadowDx="1"-->
+    <!--        android:shadowDy="1"-->
+    <!--        android:shadowRadius="1"-->
+    <!--        android:text="@string/cows_and_bulls"-->
+    <!--        android:textColor="@color/lightRed"-->
+    <!--        android:textSize="20sp"-->
+    <!--        android:textStyle="bold"-->
+    <!--        android:translationZ="10dp"-->
+    <!--        android:typeface="normal"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@+id/cardView"-->
+    <!--        app:layout_constraintEnd_toEndOf="@+id/cardView"-->
+    <!--        app:layout_constraintStart_toStartOf="@+id/cardView"-->
+    <!--        app:layout_constraintTop_toTopOf="@+id/cardView" />-->
 
     <EditText
         android:id="@+id/inputGueesBlock"
@@ -89,6 +130,42 @@
         app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.442"
-        />
+        app:layout_constraintVertical_bias="0.442" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="353dp"
+        android:layout_height="229dp"
+        android:layout_marginTop="15dp"
+        android:background="#8A726E"
+        app:fastScrollEnabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputGueesBlock"
+        app:layout_constraintVertical_bias="0.548" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="128dp"
+        android:layout_height="155dp"
+        app:layout_constraintBottom_toTopOf="@+id/inputGueesBlock"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.236"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintVertical_bias="0.651"
+        app:srcCompat="@drawable/cows" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="216dp"
+        android:layout_height="161dp"
+        android:rotationY="181"
+        app:layout_constraintBottom_toTopOf="@+id/inputGueesBlock"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.692"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintVertical_bias="0.756"
+        app:srcCompat="@drawable/bulls" />
 </androidx.constraintlayout.widget.ConstraintLayout>
