--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="arcade">#F1514E</color>
+    <color name="lightRed">#FE8575</color>
+    <color name="deepBrown">#5B4D4C</color>
+    <color name="lightBrown">#EFCFBA</color>
 </resources>
