Created a new Activity.

--- a/app/src/main/res/layout/activity_initial_view.xml
+++ b/app/src/main/res/layout/activity_initial_view.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/deepBrown">
-
+    android:background="@color/deepBrown"
+    tools:context=".InitialViewActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
