--- a/app/src/main/res/layout/activity_initial_view.xml
+++ b/app/src/main/res/layout/activity_initial_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -71,17 +71,15 @@
             android:text="Jogar"
             android:textColor="@color/deepBrown"
             tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="447dp" />
+            tools:layout_editor_absoluteY="447dp"/>
 
-        <ProgressBar
-            android:id="@+id/playProgressBar"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/icInfo"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:indeterminate="true"
-            android:indeterminateTint="@color/white"
-            android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@+id/playButton"
-            tools:layout_editor_absoluteX="0dp" />
+            android:src="@drawable/ic_info"
+            android:layout_marginTop="100dp"/>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</RelativeLayout>
