--- a/app/src/main/res/layout/activity_initial_view.xml
+++ b/app/src/main/res/layout/activity_initial_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:screenOrientation="portrait"
     android:layout_height="match_parent"
     android:background="@color/deepBrown"
     tools:context=".InitialViewActivity">
@@ -73,12 +74,15 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="447dp"/>
 
-        <ImageView
-            android:id="@+id/icInfo"
+        <ImageButton
+            android:id="@+id/button_about"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_info"
-            android:layout_marginTop="100dp"/>
+            android:background="#00FFFFFF"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            app:srcCompat="@drawable/ic_info"
+            tools:ignore="SpeakableTextPresentCheck" />
     </LinearLayout>
 
 
