--- a/app/src/main/res/layout/fragment_about_matheus.xml
+++ b/app/src/main/res/layout/fragment_about_matheus.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.AboutMatheusFragment">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sobre mim"
-        android:textSize="48dp"
-        android:layout_centerInParent="true"/>
+        android:layout_width="205dp"
+        android:layout_height="104dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="211dp"
+        android:layout_marginEnd="206dp"
+        android:text="Matheus"
+        android:textSize="48dp" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="271dp"
+        android:layout_height="208dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-51dp"
+        android:layout_marginTop="3dp"
+        android:src="@drawable/profilematheus" />
 
 </RelativeLayout>
