--- a/app/src/main/res/layout/fragment_about_matheus.xml
+++ b/app/src/main/res/layout/fragment_about_matheus.xml
@@ -8,13 +8,15 @@
 
     <TextView
         android:layout_width="205dp"
-        android:layout_height="104dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="211dp"
-        android:layout_marginEnd="206dp"
-        android:text="Matheus"
-        android:textSize="48dp" />
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginEnd="-41dp"
+        android:layout_toEndOf="@+id/imageView5"
+        android:text="Matheus Coelho"
+        android:textSize="20dp" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -26,4 +28,37 @@
         android:layout_marginTop="3dp"
         android:src="@drawable/profilematheus" />
 
+    <TextView
+        android:layout_width="205dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="211dp"
+        android:layout_marginEnd="206dp"
+        android:text="Idade: 21"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="308dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="240dp"
+        android:layout_marginEnd="103dp"
+        android:text="Email: macomusa14@gmail.com"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="270dp"
+        android:layout_marginEnd="131dp"
+        android:text="Curso: Ciência da Computação"
+        android:textSize="20dp" />
+    
 </RelativeLayout>
