--- a/app/src/main/res/layout/activity_initial_view.xml
+++ b/app/src/main/res/layout/activity_initial_view.xml
@@ -59,7 +59,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginBottom="56dp"
             android:backgroundTint="@color/lightRed"
-            android:hint="Nome ou Apelido"
+            android:hint="Name or Nickname"
             android:inputType="textPersonName"
             android:textColorHint="@color/lightBrown"
             app:layout_constraintBottom_toTopOf="@+id/playButton"
@@ -69,7 +69,7 @@
             android:id="@+id/playButton"
             android:layout_width="380dp"
             android:layout_height="wrap_content"
-            android:text="Jogar"
+            android:text="Play"
             android:textColor="@color/deepBrown"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="447dp"/>
