--- a/app/src/main/res/layout/fragment_about_cristofer.xml
+++ b/app/src/main/res/layout/fragment_about_cristofer.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toTopOf="@+id/profileImageView" />
 
     <Button
-        android:id="@+id/btn_linkedin"
+        android:id="@+id/btn_linkedin_cristofer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Linkedin"
