--- a/app/src/main/res/layout/fragment_about_matheus.xml
+++ b/app/src/main/res/layout/fragment_about_matheus.xml
@@ -4,18 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AboutMatheusFragment">
+    tools:context=".fragments.AboutMatheusFragment"
+    android:background="@color/black">
 
     <TextView
-        android:layout_width="205dp"
-        android:layout_height="wrap_content"
+        android:layout_width="252dp"
+        android:layout_height="28dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="94dp"
-        android:layout_marginEnd="-41dp"
+        android:layout_marginStart="-254dp"
+        android:layout_marginTop="284dp"
+        android:layout_marginEnd="67dp"
         android:layout_toEndOf="@+id/imageView5"
-        android:text="Matheus Coelho"
+        android:text="Padawan: Matheus Coelho"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/yellow"
         android:textSize="20dp" />
 
     <ImageView
@@ -24,41 +27,33 @@
         android:layout_height="208dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="-51dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="47dp"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/profilematheus" />
 
     <TextView
-        android:layout_width="205dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/textAboutMe"
+        android:layout_width="380dp"
+        android:layout_height="186dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="211dp"
-        android:layout_marginEnd="206dp"
-        android:text="Idade: 21"
-        android:textSize="20dp" />
+        android:layout_marginTop="333dp"
+        android:layout_marginEnd="16dp"
+        android:text="Muito prazer, eu me chamo Matheus Coelho, sou estudante de Ciência da Computação na Universidade Católica de Pernambuco. Atualmente trabalho com desenvolvimento desktop windows, e estou aprendendo sobre desenvolvimento mobile com Kotlin. Algumas curiosidades sobre mim é que sou muito fã de Star Wars e gosto de ler livros que falam sobre autoconhecimento.\n\n Que a força sempre esteja com você!"
+        android:textAlignment="center"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/yellow"
+        android:textSize="15dp" />
 
-    <TextView
-        android:layout_width="308dp"
+    <Button
+        android:id="@+id/btn_linkedin_matheus"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="103dp"
-        android:text="Email: macomusa14@gmail.com"
-        android:textSize="20dp" />
-
-    <TextView
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="270dp"
-        android:layout_marginEnd="131dp"
-        android:text="Curso: Ciência da Computação"
-        android:textSize="20dp" />
-    
+        android:layout_alignBottom="@+id/textAboutMe"
+        android:layout_marginBottom="-74dp"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/blue"
+        android:text="Linkedin"/>
 </RelativeLayout>
