--- a/app/src/main/res/layout/fragment_home_about.xml
+++ b/app/src/main/res/layout/fragment_home_about.xml
@@ -17,7 +17,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.569" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_about_matheus"
@@ -29,7 +30,8 @@
         app:layout_constraintBottom_toTopOf="@+id/button_about_cristofer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.853" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
