--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="lightRed">#FE8575</color>
     <color name="deepBrown">#5B4D4C</color>
     <color name="lightBrown">#EFCFBA</color>
+    <color name="yellow">#FBC02D</color>
+    <color name="blue">#1976D2</color>
 </resources>
