Adjusted the button text color.

--- a/app/src/main/res/layout/fragment_about_cristofer.xml
+++ b/app/src/main/res/layout/fragment_about_cristofer.xml
@@ -72,7 +72,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.83" />
+        app:layout_constraintVertical_bias="0.83"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/courseTextView"
