--- a/app/src/main/res/layout/fragment_about_matheus.xml
+++ b/app/src/main/res/layout/fragment_about_matheus.xml
@@ -43,7 +43,6 @@
         android:layout_marginEnd="16dp"
         android:text="Muito prazer, eu me chamo Matheus Coelho, sou estudante de Ciência da Computação na Universidade Católica de Pernambuco. Atualmente trabalho com desenvolvimento desktop windows, e estou aprendendo sobre desenvolvimento mobile com Kotlin. Algumas curiosidades sobre mim é que sou muito fã de Star Wars e gosto de ler livros que falam sobre autoconhecimento.\n\n Que a força sempre esteja com você!"
         android:textAlignment="center"
-        android:layout_centerHorizontal="true"
         android:textColor="@color/yellow"
         android:textSize="15dp" />
 
@@ -55,5 +54,6 @@
         android:layout_marginBottom="-74dp"
         android:layout_centerHorizontal="true"
         android:backgroundTint="@color/blue"
-        android:text="Linkedin"/>
+        android:text="Linkedin"
+        android:textColor="@color/white"/>
 </RelativeLayout>
